Xxx Xxx 99 99:99:99 UTC 2010

        0.99 release.

        Changes

        - Automate sync, push, and pull now output information about
          each transferred revision, cert and key, in basic_io format.
        
        - Changelog editor format simplified; user entered text at top
          of file, instructions reduced. Edited text is saved if
          commit is canceled.
        
        - On Win32 native, '--no-format-dates' is the default for
          'commit', since dates are not parseable on Win32 native.

        - 'automate genkey' is renamed to 'automate generate_key'

        - Selectors are much more powerful now, and the characters '(',
          ')', and ';' need to be quoted if mean literally (just like
          '/'). See section 3.2 in the documentation for details.
          (fixes monotone bug #18302).

        - The command 'db kill_rev_locally' has been renamed to
          'local kill_revision', and 'db kill_tag_locally' and
          'db kill_branch_certs_locally' have been replaced with a more
          flexible command 'local kill_certs'.

        - The 'cert' command can now operate on multiple revisions at once.

        - The SERVER [BRANCH] call syntax for network-related commands
          has been deprecated in favour of the existing, universal
          URI syntax.  Additionally, file:// and ssh:// URIs are now
          parsed for include and exclude patterns just as the native
          mtn:// URIs.

          The possibility to specify include patterns by using
          'include=' and exclude patterns by using 'exclude='
          in the query string has been removed. Patterns are separated
          by ';' and will be treated as include patterns unless prefixed
          with '-'. Where you could previously specify
          "mtn://host/?include=foo,exclude=bar", you would now give
          "mtn://host/?foo;-bar" instead.

          Monotone's native protocol (mtn://) is still the default