@@ -1,0 +1,10 @@
+ receive 
+revision "0"
+    cert "0"
+     key "0"
+
+    send 
+revision "1"
+    cert "5"
+     key "0"
+  branch "foo2" "1"
